UPDATE .gitignore to not include WORKBENCH

--- a/diary.html
+++ b/diary.html
@@ -126,13 +126,21 @@ Gesamtdauer: ca. 6h
 
 Gesamtdauer: ca. 8h
 ###############################################################################
-# 2.11.2014 - Sort and do online research
+# 2.11.2014 - check google spread sheets api
 ###############################################################################
 experimenting with google spread sheet scripts
 
-Gesamtdauer: ca. 4h
 
+Gesamtdauer: ca. 8h
+###############################################################################
+# 3.11.2014 - check static site generators
+###############################################################################
+experimenting with static site generators
 
+Gesamtdauer: ca. 8h
+###############################################################################
+# 4.11.2014 -
+###############################################################################
 <!--
 
 @TODO:
