FIX interaction design bugs

--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html5>
-<html lang="en" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache desktop portrait">
+<html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 , user-scalable=no">
+    <meta name="viewport" content="width=1024, user-scalable=no">
 
     <title>fairydust agency</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <meta property="og:title" content="fairydust web agency" />
+    <meta property="og:site_name" content="fairydust.agency" />
+    <meta property="og:url" content="http://fairydust.agency" />
+    <meta property="og:description" content="fairydust is a web agency incubator - we build apps" />
+    <meta property="og:image" content="pic/issuing_an_asset.gif" />
+
     <script src="./fairydust/modernizr-2.6.2.min.js"></script>
 
   </head>
 
-  <body cz-shortcut-listen="true">
+  <body>
     <!-- site -->
     <div class="site">
         <span class="show-mobile-menu">show-menu</span>
         <!-- site__menu -->
-        <div class="site__menu" style="top: 0px;">
-            <a href="index.html#" class="site__menu__logo"><img src="./fairydust/menu-logo.png" width="221" height="80" alt=""></a>
+        <div class="site__menu">
+            <a href="#" class="site__menu__logo"><img src="./fairydust/menu-logo.png" width="221" height="80" alt=""></a>
             <!-- main-menu -->
             <nav class="main-menu">
-              <a href="index.html#about"><span>About</span></a>
-              <a href="index.html#download"><span>Download</span></a>
-              <a href="index.html#recources"><span>Resources</span></a>
-              <a href="index.html#contact"><span>Contact</span></a>
+              <a href="#about"><span>About</span></a>
+              <a href="#download"><span>Download</span></a>
+              <a href="#recources"><span>Resources</span></a>
+              <a href="#contact"><span>Contact</span></a>
             </nav>
             <!-- /main-menu -->
             <a href="guide.html" class="user-guide-btn">USER GUIDE</a>
@@ -35,17 +40,17 @@
 
 
         <!-- site__page -->
-        <header class="header site__page">
+        <header class="header site__page active">
 
             <!-- site__content -->
             <div class="site__content">
 
                 <!-- site__center -->
-                <div class="site__center" style="height: 951px;">
+                <div class="site__center">
                     <div>
 
                         <!-- logo -->
-                        <h1 class="logo" style="display: block; top: -228px;">
+                        <h1 class="logo">
                             ChromaWallet The colored coins wallet
                         </h1>
                         <!-- /logo -->
@@ -55,7 +60,7 @@
                 <!-- /site__center -->
 
 
-                <a href="index.html#" class="down-btn" style="display: none;">
+                <a href="#" class="down-btn">
                     <span>Discover</span>
                 </a>
 
@@ -66,22 +71,22 @@
         <!-- /site__page -->
 
         <!-- site__page -->
-        <div class="site__page active">
+        <div class="site__page">
 
             <!-- site__content -->
-            <div class="site__content" style="height: 836px;">
+            <div class="site__content">
 
                 <!-- colored-video -->
-                <a href="http://www.youtube.com/embed/fmFjmvwPGKU" class="colored-video video-call" style="height: 836px; right: 0px;"></a>
+                <a href="http://www.youtube.com/embed/fmFjmvwPGKU" class="colored-video video-call"></a>
                 <!-- /colored-video -->
 
                 <!-- colored-text -->
-                <div class="colored-text" style="height: 836px; left: 0px; display: table;">
+                <div class="colored-text">
 
                     <div class="cell">
 
                         <!-- colored-text__show -->
-                        <div class="colored-text__show" style="opacity: 1;">
+                        <div class="colored-text__show">
 
                             <h2>The colored coins
                                 wallet</h2>
@@ -96,7 +101,7 @@
                                 <dd>Includes p2ptrade: a built-in peer-to-peer exchange</dd>
                             </dl>
 
-                            <a href="index.html#" class="colored-download">download</a>
+                            <a href="#" class="colored-download">download</a>
 
                             <span>Note: The software is still under development, a beta version is available for testing.</span>
 
@@ -108,7 +113,7 @@
                 </div>
                 <!-- /colored-text -->
 
-                <a href="index.html#" class="down-btn down-btn_white" style="display: inline;"><span>Discover</span></a>
+                <a href="#" class="down-btn down-btn_white"><span>Discover</span></a>
 
 
             </div>
@@ -124,13 +129,13 @@
         <div class="site__page" id="about">
 
             <!-- site__content -->
-            <div class="site__content" style="height: 836px;">
+            <div class="site__content">
 
                 <!-- programma -->
-                <div class="instruction-back" style="height: 836px;">
+                <div class="instruction-back">
 
 
-                    <div class="instruction-back__tabel" style="height: 836px;">
+                    <div class="instruction-back__tabel">
 
                         <div class="instruction-back__tabel-cell">
 
@@ -157,7 +162,7 @@
                 <!-- /programma -->
 
                 <!-- about-text -->
-                <div class="about-text" style="height: 836px;">
+                <div class="about-text">
 
                     <div class="cell">
                         <!-- about-text__wrap -->
@@ -184,7 +189,7 @@
                 </div>
                 <!-- /about-text -->
 
-                <a href="index.html#" class="down-btn down-btn_white" style="display: inline;"><span>Discover</span></a>
+                <a href="#" class="down-btn down-btn_white"><span>Discover</span></a>
 
 
             </div>
@@ -201,21 +206,21 @@
         <div class="site__page" id="download">
 
             <!-- site__content -->
-            <div class="site__content" style="height: 836px;">
+            <div class="site__content">
 
 
 
 
                 <!-- download-page -->
-                <div class="download-page" style="height: 836px;">
+                <div class="download-page">
 
                     <!-- squeres -->
                     <div class="squeres">
-                        <div class="squers__item1" style="transform: matrix3d(0.98793238401413, 0.0451292917132378, -0.148165434598923, 0, 0, 0.956610083580017, 0.291371166706085, 0, 0.154885917901993, -0.287854999303818, 0.945066094398499, 0, 0, 0, 0, 1);"><div></div></div>
-                        <div class="squers__item2" style="transform: matrix3d(0.98793238401413, 0.0451292917132378, -0.148165434598923, 0, 0, 0.956610083580017, 0.291371166706085, 0, 0.154885917901993, -0.287854999303818, 0.945066094398499, 0, 0, 0, 0, 1);"><div></div></div>
-                        <div class="squers__item3" style="transform: matrix3d(0.98793238401413, 0.0451292917132378, -0.148165434598923, 0, 0, 0.956610083580017, 0.291371166706085, 0, 0.154885917901993, -0.287854999303818, 0.945066094398499, 0, 0, 0, 0, 1);"><div></div></div>
-                        <div class="squers__item4" style="transform: matrix3d(0.98793238401413, 0.0451292917132378, -0.148165434598923, 0, 0, 0.956610083580017, 0.291371166706085, 0, 0.154885917901993, -0.287854999303818, 0.945066094398499, 0, 0, 0, 0, 1);"><div></div></div>
-                        <div class="squers__item5" style="transform: matrix3d(0.98793238401413, 0.0451292917132378, -0.148165434598923, 0, 0, 0.956610083580017, 0.291371166706085, 0, 0.154885917901993, -0.287854999303818, 0.945066094398499, 0, 0, 0, 0, 1);"><div></div></div>
+                        <div class="squers__item1" ><div></div></div>
+                        <div class="squers__item2" ><div></div></div>
+                        <div class="squers__item3" ><div></div></div>
+                        <div class="squers__item4" ><div></div></div>
+                        <div class="squers__item5" ><div></div></div>
                     </div>
                     <!-- /squeres -->
 
@@ -289,7 +294,7 @@
                 </div>
                 <!-- /download-page -->
 
-                <a href="index.html#" class="down-btn down-btn_white" style="display: inline;"><span>Discover</span></a>
+                <a href="#" class="down-btn down-btn_white"><span>Discover</span></a>
 
 
 
@@ -307,7 +312,7 @@
         <div class="site__page" id="recources">
 
             <!-- site__content -->
-            <div class="site__content" style="height: 836px; overflow: hidden; position: relative;">
+            <div class="site__content">
 
                 <!-- resources -->
                 <div class="resources">
@@ -329,7 +334,7 @@
                 <div class="shtorka-left"></div>
                 <div class="shtorka-right"></div>
 
-                <a href="index.html#" class="down-btn down-btn_white" style="display: inline;"><span>Discover</span></a>
+                <a href="#" class="down-btn down-btn_white"><span>Discover</span></a>
 
 
             </div>
@@ -345,7 +350,7 @@
         <div class="site__page" id="contact">
 
             <!-- site__content -->
-            <div class="site__content" style="height: 836px;">
+            <div class="site__content">
 
 
                 <!-- contacts -->
@@ -371,9 +376,9 @@
                 </div>
                 <!-- /contacts -->
 
-                <div class="contacts__back" style="left: -482.39px; top: -493.79px;"></div>
+                <div class="contacts__back"></div>
 
-                <a href="index.html#" class="up-btn">Discover</a>
+                <a href="#" class="up-btn">Discover</a>
 
             </div>
             <!-- /site__content -->
