ADD custom text

--- a/guide.html
+++ b/guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html5>
-<html lang="en" class="site_fairydust02 js flexbox flexboxlegacy canvas canvastext webgl no-touch postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache">
+<html lang="en" class="site_fairydust02">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -42,17 +42,23 @@
             <div class="user-guide">
 
                 <h1>
-                    CHROMAWALLET
+                    FAIRYDUST
                     USER GUIDE
                 </h1>
 
                 <!-- user-guide__menu -->
-                <ul class="user-guide__menu">
+                <!-- <ul class="user-guide__menu">
                     <li><h2>TABLE OF CONTENTS</h2></li>
                     <li><a href="installetion">Installation</a> </li>
                     <li><a href="managment">Asset Management</a> </li>
                     <li><a href="sending">Sending and Receiving Assets</a> </li>
                     <li><a href="trade">P2P Trade</a> </li>
+                </ul> -->
+                <ul class="user-guide__menu">
+                    <li><h2>Agile Project Checklist </h2></li>
+                    <li><a href="installetion">Agile Management</a> </li>
+                    <li><a href="managment">Checklist</a> </li>
+                    <li><a href="sending">Introduction</a> </li>
                 </ul>
                 <!-- /user-guide__menu -->
 
@@ -84,6 +90,17 @@
 
                         <!-- installetion__text -->
                         <div class="installetion__text">
+
+                            <h2>AGILE MANAGEMENT</h2>
+
+                            <p>Agile management or agile project management is a method of managing the design and build activities of software development projects in a highly flexible and interactive manner. </p>
+                            <ul>
+                                <li>Agile techniques may also be called extreme project management. </li>
+                                <li>It is a variant of iterative life cycle[1] where deliverables are submitted in stages.</li>
+                            </ul>
+                            <p>Explaining agile development to customers can sometimes be hard, that's why we prepared the following checklist of what agile projects are about.</p>
+                        </div>
+                        <!-- <div class="installetion__text">
 
                             <h2>INSTALLATION</h2>
 
@@ -121,7 +138,7 @@
                                     <p>You can now send bitcoins and assets between the two wallets.</p>
                                 </li>
                             </ol>
-                        </div>
+                        </div> -->
                         <!-- /installetion__text -->
 
                     </div>
@@ -143,13 +160,15 @@
                     <div class="managment__video">
                         <span class="post-load post-load_loaded" data-pic="pic/issuing_an_asset.gif" style="width: 612px; height: 411px"><img src="./fairydust/issuing_an_asset.gif"></span>
                     </div>
+
+                    http://youtu.be/OJflDE6OaSc
                     <!-- /managment__video -->
 
 
                     <!-- managment__text -->
                     <div class="managment__text">
 
-                        <h2>ASSET MANAGEMENT</h2>
+                        <!-- <h2>ASSET MANAGEMENT</h2>
 
                         <h3>Issuing an Asset</h3>
 
@@ -175,6 +194,57 @@
                                 The asset should appear in your asset tab. If you go to the overview tab, your asset
                                 should be listed along with its   balance and address.
                             </li>
+                        </ol> -->
+
+                        <h2>CHECKLIST</h2>
+
+                        <h3>How does working in stages look like?</h3>
+
+                        <ol>
+                            <li>
+                                <span>1.</span>
+                                You get a working, maintainable, production ready, 100% quality piece of software in a fixed amount of time.
+                            </li>
+                            <li>
+                                <span>2.</span>
+                                You do get a first working, maintainable, production ready, 100% quality version of that software after a very short time (usually 1-2 weeks).
+                            </li>
+                            <li>
+                                <span>3.</span>
+                                You DO get to launch your software in time.
+                            </li>
+                            <li>
+                                <span>4.</span>
+                                We do pair program all the time to ensure that quality doesn’t slow us down.
+                            </li>
+                            <li>
+                                <span>5.</span>
+                                You don't necessarily get all the features you wanted after an iteration.
+                            </li>
+                            <li>
+                                <span>6.</span>
+                                We estimate how long each feature will take us to implement. But it’s only an estimation.
+                            </li>
+                            <li>
+                                <span>7.</span>
+                                We can't accept a functional specification you bring in as a basis for our work.
+                            </li>
+                            <li>
+                                <span>8.</span>
+                                We don't believe this would work. We don't believe it is possible to completely specify a software upfront with tolerable effort.
+                            </li>
+                            <li>
+                                <span>9.</span>
+                                We use your functional specificaton as a basis for a discussion where we write down stories for each feature together with you. Those then form the basis of our work.
+                            </li>
+                            <li>
+                                <span>10.</span>
+                                We embrace changing requirements by working in short iterations.
+                            </li>
+                            <li>
+                                <span>11.</span>
+                               We deliver successful software projects when working like this.
+                            </li>
                         </ol>
 
                     </div>
@@ -196,6 +266,28 @@
 
                     <!-- managment__text -->
                     <div class="managment__text">
+
+                        <h3>Tools</h3>
+
+                        <p>To make development of your project smooth and a pleasant experience and to enable you always have an overview, we use those tools:</p>
+
+                        <ol>
+                            <li>
+                                <span>1.</span>
+                                For simple visual overview, we use <a href="https://waffle.io/">Waffle project management board</a>
+                            </li>
+                            <li>
+                                <span>2.</span>
+                                Programming code is safely saved on <a href="https://github.com/">Github</a>
+                            </li>
+                            <li>
+                                <span>3.</span>
+                                And for direct communication we use <a href="https://github.com/">Github</a>
+                            </li>
+                        </ol>
+
+                    </div>
+                    <!-- <div class="managment__text">
 
                         <h3>Publishing the Asset you Created</h3>
 
@@ -233,7 +325,7 @@
                         <p>(Alternatively you can copy individual parts of asset definition: name, color set (color
                             identifiers), unit (number of satoshi in one unit).</p>
 
-                    </div>
+                    </div> -->
                     <!-- /managment__text -->
 
                 </div>
@@ -252,7 +344,7 @@
                     <!-- managment__text -->
                     <div class="managment__text">
 
-                        <h3>Adding an Existing Asset</h3>
+                        <!-- <h3>Adding an Existing Asset</h3>
 
                         <h4>Method One: Import Asset via JSON (Recommended)</h4>
 
@@ -303,7 +395,7 @@
                                 <span>3.</span>
                                 After you click OK the asset should appear in your Assets tab and in your Overview tab.
                             </li>
-                        </ol>
+                        </ol> -->
 
                     </div>
                     <!-- /managment__text -->
@@ -330,7 +422,7 @@
                     <!-- sending__text -->
                     <div class="sending__text">
 
-                        <h2>SENDING AND RECEIVING ASSETS</h2>
+                        <!-- <h2>SENDING AND RECEIVING ASSETS</h2>
 
                         <ul>
                             <li>You need to make sure that asset definition is known to your wallet before you can
@@ -349,7 +441,7 @@
                             if color of an address doesn't match the asset name you have chosen in the drop-down menu.</i></p>
 
                         <p>Note: <i>You need bitcoins to pay a transaction fee. (In case with testnet mode, You can
-                            obtain some from a faucet)</i>.</p>
+                            obtain some from a faucet)</i>.</p> -->
 
                     </div>
                     <!-- /sending__text -->
@@ -376,7 +468,7 @@
                     <!-- trade__text -->
                     <div class="trade__text">
 
-                        <h2>P2P TRADE</h2>
+                        <!-- <h2>P2P TRADE</h2>
 
                         <ol>
                             <li>
@@ -406,7 +498,7 @@
                                 <span>6.</span>
                                 To delete your order (distinguished by dark grey in the list), double-click it.
                             </li>
-                        </ol>
+                        </ol> -->
 
                     </div>
                     <!-- /trade__text -->
