--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <a href="#" class="site__menu__logo"><img src="./fairydust/menu-logo.png" width="221" height="80" alt=""></a>
             <!-- main-menu -->
             <nav class="main-menu">
-              <a href="#about"><span>About</span></a>
-              <a href="#download"><span>Download</span></a>
-              <a href="#recources"><span>Resources</span></a>
+              <a href="#about"><span>What we do</span></a>
+              <a href="#download"><span>Projects</span></a>
+              <a href="#recources"><span>Process</span></a>
               <a href="#contact"><span>Contact</span></a>
             </nav>
             <!-- /main-menu -->
@@ -51,7 +51,7 @@
 
                         <!-- logo -->
                         <h1 class="logo">
-                            ChromaWallet The colored coins wallet
+                          FairyDust We are software consultancy, based in Berlin and we deliver high quality web apps in short timespans - and with style.
                         </h1>
                         <!-- /logo -->
 
@@ -88,10 +88,9 @@
                         <!-- colored-text__show -->
                         <div class="colored-text__show">
 
-                            <h2>The colored coins
-                                wallet</h2>
+                            <h2>Our competences</h2>
 
-                            <dl>
+                            <!-- <dl>
                                 <dt>The next-generation <a href="http://coloredcoins.org/" target="_blank">colored coins</a>
                                   platform (formerly known as NGCCC):</dt>
                                 <dd><a href="https://github.com/bitcoinx/ngcccbase/" target="_blank">100% open source</a></dd>
@@ -99,11 +98,19 @@
                                 <dd>Can run in thin client (SPV) mode</dd>
                                 <dd>Flexible, suitable as a platform for custom solutions</dd>
                                 <dd>Includes p2ptrade: a built-in peer-to-peer exchange</dd>
+                            </dl> -->
+                            <dl>
+                                <dd> Web development </dd>
+                                <dd></dd>
+                                <dd>Code maintainance</dd>
+                                <dd>Training</dd>
+                                <dt>
+                                  We bring a personal and effective approach to every project we work on.</dt>
                             </dl>
-
+<!--
                             <a href="#" class="colored-download">download</a>
 
-                            <span>Note: The software is still under development, a beta version is available for testing.</span>
+                            <span>Note: The software is still under development, a beta version is available for testing.</span> -->
 
                         </div>
                         <!-- /colored-text__show -->
@@ -168,7 +175,7 @@
                         <!-- about-text__wrap -->
                         <div class="about-text__wrap">
 
-                            <h2>About</h2>
+                            <!-- <h2>About</h2>
 
                             <dl>
                                 <dt>ChromaWallet functions just like a normal Bitcoin wallet, but additionally it allows one to work with assets which are represented with colored coins, particularly to:</dt>
@@ -177,7 +184,19 @@
                                 <dd>Trade on the build-in decentralized exchange</dd>
                             </dl>
 
-                            <p>Information about ownership of colored coins is recorded directly in the Bitcoin blockchain, which means it is unforgeable and doesn't rely on any third-party server to keep valid records of ownership. Additionally, we plan to implement Bitcoin's <a href="https://en.bitcoin.it/wiki/Contracts" target="_blank">advanced features</a>, such as escrow, dispute mediation, trustless mixing and so on. Stay tuned!</p>
+                            <p>Information about ownership of colored coins is recorded directly in the Bitcoin blockchain, which means it is unforgeable and doesn't rely on any third-party server to keep valid records of ownership. Additionally, we plan to implement Bitcoin's <a href="https://en.bitcoin.it/wiki/Contracts" target="_blank">advanced features</a>, such as escrow, dispute mediation, trustless mixing and so on. Stay tuned!</p> -->
+                            <h2>What we do</h2>
+
+                            <dl>
+                                <dd>PROGRAMMING (Confident and professional approach. Are regular community members in Ruby on Rails, Javascript and NodeJs community) </dd>
+                                <dd>DEPLOYMENT (We build for you an automated and clean deployment process)</dd>
+                                <dd>SCALLING AND PERFORMANCE (Does your app run slow? Long processes are killing your servers? We can provide solutions to your performance and scaling issues)</dd>
+                                <dd>OPEN SOURCE (We believe that you can't be a great developer if you don't give back to the community. We regulary contribute to the open source)</dd>
+                                <dd>RESEARCH (Finding the best solutions is our top priority in every task. We research every problem into depth and make sure we find the best solution for you) </dd>
+                                <dd>TRAINING ( We provide trainings for you and your team) </dd>
+                            </dl>
+
+                            <p> We also always care to have enough fresh blood in our team. We offer new opportunities for young developers, specially <a href="http://railsgirlsberlin.de/">Rails Girls</a>.</p>
 
                         </div>
                         <!-- /about-text__wrap -->
@@ -225,7 +244,7 @@
                     <!-- /squeres -->
 
                     <!-- download-page__text -->
-                    <div class="download-page__text">
+                    <!-- <div class="download-page__text">
 
                         <h2>Download ChromaWallet</h2>
                         <p>Warning: This is an early beta
@@ -287,7 +306,64 @@
                                 </span>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
+<div class="download-page__text">
+
+    <h2>Recent work</h2>
+    <p>Some of our past and present projects:</p>
+
+    <ul>
+        <li>
+            <span class="download-btn">
+                <span>
+                    <span>
+                        <span>
+                          <a href="http://reinventingengagement.com/">Reinventing Engagement</a>
+                        </span>
+                    </span>
+                </span>
+                <div class="back-squere"></div>
+
+            </span>
+        </li>
+        <li>
+            <span class="download-btn">
+                <span>
+                    <span>
+                        <span>
+                          <a href="http://sosed.biz/delim">Sosed</a>
+                        </span>
+                    </span>
+                </span>
+                <div class="back-squere"></div>
+            </span>
+        </li>
+        <li>
+            <span class="download-btn">
+                <span>
+                    <span>
+                        <span>
+                          <a href="http://www.codingamigos.com">Coding Amigos</a>
+                        </span>
+                    </span>
+                </span>
+                <div class="back-squere"></div>
+            </span>
+        </li>
+        <li>
+            <span class="download-btn">
+                <span>
+                    <span>
+                        <span>
+                          <a href="http://www.codingamigos.com"></a>
+                        </span>
+                    </span>
+                </span>
+                <div class="back-squere"></div>
+            </span>
+        </li>
+    </ul>
+</div>
                     <!-- /download-page__text -->
 
 
@@ -319,11 +395,15 @@
 
                     <div>
                         <div>
-                            <h2>Resources</h2>
+                            <h2>Process</h2>
+
+                            <p>Standardized processes for online collaboration with our customers during the project enable us to provide high quality products in short timespans.</p>
+
+                            <!-- <h2>Resources</h2>
 
                             <p>You can find more general information about colored coins on the <a href="http://coloredcoins.org/about/" target="_blank"> community site</a>. The current version of ChromaWallet implements a protocol described <a href="https://github.com/bitcoinx/ngcccbase/wiki/ChromaToken">here</a>. There is also a document about the <a href="https://github.com/bitcoinx/colored-coin-tools/wiki/colored_coins_intro" target="_blank">theory</a> of colored coins.</p>
                             <p>More whitepapers and information can be found on the ChromaWay <a href="http://www.chromaway.com/#/resources">resources</a> page.
-                            Source code of our colored-coin related projects are on the ChromaWay <a href="https://github.com/chromaway/">GitHub</a></p>
+                            Source code of our colored-coin related projects are on the ChromaWay <a href="https://github.com/chromaway/">GitHub</a></p> -->
 
                             <a href="guide.html" class="resources__giude">User's guide</a>
                         </div>
@@ -356,7 +436,7 @@
                 <!-- contacts -->
                 <div class="contacts">
 
-                    <div>
+                    <!-- <div>
                         <h2>contacts</h2>
 
                         <div>
@@ -369,6 +449,22 @@
                                 <p>The company ChromaWay handles commercial <a href="http://www.chromaway.com/">Enquiries</a></p>
                                 <p>To talk about ChromaWallet and colored coins the best place is the colored coins google group.
                                 <a href="https://groups.google.com/group/bitcoinX/" target="_blank">Discuss</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div>
+                        <h2>contacts</h2>
+
+                        <div>
+                            <div class="contacts__left">
+                                <p>If you have questions and just need some tech expert to bounce ideas with, you can reach us here.<a href="https://twitter.com/serapath" target="_blank">Tweet</a></p>
+                            </div>
+
+                            <div class="contacts__right">
+                                <p>If you want to get started with your project, please use this e-mail.<a href="https://groups.google.com/group/bitcoinX/" target="_blank">E-mail</a></p>
+                                <p>To talk about your idea in the group, the best place is our LinkedIn group.
+                                <a href="https://www.linkedin.com/groups?mostRecent=&gid=3889758&trk=my_groups-tile-flipgrp" target="_blank">Discuss</a>
                                 </p>
                             </div>
                         </div>
